--- a/src/user/index.css
+++ b/src/user/index.css
@@ -33,7 +33,7 @@
 @layer components {
     .swiper-button-next,
     .swiper-button-prev {
-        @apply text-white bg-black bg-opacity-50 rounded-full w-12 h-12 hover:bg-opacity-70 transition-all duration-300;
+        @apply text-white bg-black/50 rounded-full w-12 h-12 hover:bg-black/70 transition-all duration-300;
     }
 
     .swiper-button-next:after,
