--- a/src/admin/pages/OrderProductPage/OrderProductPage.scss
+++ b/src/admin/pages/OrderProductPage/OrderProductPage.scss
@@ -187,9 +187,6 @@
         padding: 15px;
         background-color: white;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        &:hover {
-          transform: translateY(-5px);
-        }
 
         .edit-order-form {
           background-color: #f9f9f9;
@@ -328,19 +325,21 @@
                 .item-name {
                   font-weight: bold;
                   color: #333;
+                  margin-bottom: 2px;
                 }
 
                 .item-quantity {
                   margin-top: 5px;
-                  font-size: 12px;
-                  color: #888;
+                  font-size: 14px;
+                  color: #666;
                 }
               }
 
               .item-price {
-                font-size: 14px;
-                color: #333;
+                font-size: 16px;
                 font-weight: bold;
+                color: #b71c1c;
+                margin-left: 15px;
               }
             }
           }
@@ -396,6 +395,7 @@
             .payment-method {
               padding: 5px 10px;
               background-color: #ffe3cc;
+              margin-top: 10px;
               color: #333;
               border: none;
               border-radius: 5px;
@@ -441,6 +441,10 @@
               }
             }
           }
+        }
+
+        .order-summary {
+          margin-bottom: 10px;
         }
       }
     }
